fix(75): CR-01 preserve LinkedHashMap insertion order in audit event